# The-Knight

./: CMakeLists.txt  Entita.cpp  Entita.h  Input.cpp  Input.h  Knight.cpp  Knight.h  README.md  SprightManager.cpp  SprightManager.h  main.cpp
Entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
Entities/Enemies/: HellHound.cpp  HellHound.h
Entities/Envirament/: Platform.cpp  Platform.h  PlatformEag.cpp
Entities/Player/: Player.cpp  Player.h
Entities/particle/: BloodSplash.cpp
Entities/particle/HellHoundGore/: HellHoundGore.cpp
Entities/souls/: Soul.cpp  Soul.h
Entities/souls/SoulsVariants/: NarunSoul.cpp  NarunSoul.h
Entitys/: Entity.cpp  Entity.h  Player.cpp  Player.h
Insertors/: InsertEntity.cpp  InsertEntity.h
Insetors/: InsertEntity.cpp
Managers/: AudioAndMusicManager.h  BackGroundManager.cpp  BackGroundManager.h  CameraManager.cpp  CameraManager.h  DrawManager.cpp  EntityManager.cpp  EntityManager.h  EnvironmenAndPhysicsManager.cpp  EnvironmenAndPhysicsManager.h  RoundsManager.cpp  RoundsManager.h  SpawnManager.cpp  SpawnManager.h  SpriteManager.cpp  SpriteManager.h  TextureManager.cpp  TextureManager.h
UIdirectory/: UIManager.cpp  UIManager.h
